# exdental

exdental/: FormDoDicom.Designer.cs  FormDoDicom.cs  FormEscolhaExame.Designer.cs  FormEscolhaExame.cs  FormEscolhaExame.resx  Program.cs  diagramas.EAP  exdental.csproj  exdental.sln  tarefas.xlsx
exdental-interop/: CMakeLists.txt  FilterInterop.h  Image.cpp  Image.h  ImageLoader.cpp  ImageLoader.h  ImageLoaderInterop.cpp  ImageLoaderInterop.h  Imagem.cpp  Imagem.h  TelaRadiografiaInterop.cpp  TelaRadiografiaInterop.h  TelaVRInterop.cpp  TelaVRInterop.h  exdental-interop.sln  exdental-interop.vcxproj
exdental-lib/: ALL_BUILD.vcxproj  CMakeLists.txt  CallbackProgressoDeCarga.h  IScreen.h  NameListGenerator.cpp  NameListGenerator.h  TelaRadiografia.cpp  TelaRadiografia.h  TelaRadiografiaInteractionStyle.cpp  TelaRadiografiaInteractionStyle.h  TelaVR.cpp  TelaVR.h  exdental-lib.sln  exdental-lib.vcxproj  imageSource.cpp  imageSource.h  itktypes.h  loadedImage.cpp  loadedImage.h  pipeline.cpp  pipeline.h
exdental-opencl-module/: CMakeLists.txt  GpuAnisotropicDiffusion.cpp  GpuAnisotropicDiffusion.h
exdental/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
experimento-hough/: CMakeLists.txt
hello-fourier/: CMakeLists.txt  hello-fourier.cpp
teste_algoritmos/: CMakeLists.txt  main.cpp
teste_algoritmos/RgbToGrayscale/: CMakeLists.txt  rgbToGrayscale.cpp
teste_algoritmos/outra-fourier/: CMakeLists.txt  outra-fourier.cpp
teste_algoritmos/radon-simples-com-itk/: CMakeLists.txt  radon-simples-itk.cpp
teste_algoritmos/teste_fourier/: CMakeLists.txt  main.cpp
